--- a/docker/Dockerfile.rpmbuild-proj
+++ b/docker/Dockerfile.rpmbuild-proj
@@ -8,6 +8,7 @@ COPY RPMS/x86_64/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
+SHELL ["/bin/bash", "-c"]
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
     /tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
