--- a/docker/Dockerfile.rpmbuild-gdal
+++ b/docker/Dockerfile.rpmbuild-gdal
@@ -41,6 +41,7 @@ COPY RPMS/x86_64/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
 
 # Install GDAL prerequisites first, before installing the package list
 # so they take precedence over packages from other repositories.
+SHELL ["/bin/bash", "-c"]
 RUN --mount=type=cache,target=/var/cache/yum \
     yum install -y \
     /tmp/CGAL-${cgal_version}${RPMBUILD_DIST}.x86_64.rpm \
@@ -61,7 +62,7 @@ RUN --mount=type=cache,target=/var/cache/yum \
     /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     && \
     rm -f /tmp/*.rpm && \
-    if [ ! -z "${packages}" ] ; then yum -y install ${packages}; fi
+    if [ -n "${packages}" ] ; then yum -y install ${packages}; fi
 
 # Install Python 3 documentation and packages.
 RUN pip3 install --disable-pip-version-check --require-hashes \
