--- a/docker/Dockerfile.rpmbuild-pgdg
+++ b/docker/Dockerfile.rpmbuild-pgdg
@@ -7,11 +7,15 @@ ARG postgres_version
 # If any package dependencies are needed, install them.
 SHELL ["/bin/bash", "-c"]
 RUN --mount=type=cache,target=/var/cache/yum \
-    /usr/local/bin/pgdg-repo.sh ${postgres_version} && \ 
-    /usr/local/bin/postgres-install.sh ${postgres_version} && \ 
+    /usr/local/bin/pgdg-repo.sh ${postgres_version} && \
+    /usr/local/bin/postgres-install.sh ${postgres_version} && \
     if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
     rm -f /usr/local/bin/rpmbuild-user.sh
+
+# Ensure the PostgreSQL socket directory is owned by the rpmbuild user.
+# This makes it easy to start the database as run as that user.
+RUN chown -R ${RPMBUILD_USER}:${RPMBUILD_GROUP} /var/run/postgresql
 
 # Use unprivileged RPM build user and work directory by default.
 USER ${RPMBUILD_USER}
