--- a/docker/Dockerfile.pip-tools
+++ b/docker/Dockerfile.pip-tools
@@ -7,6 +7,7 @@ ARG pip_tools_group=${pip_tools_user}
 ARG pip_tools_home=/${pip_tools_user}
 ARG pip_tools_shell=/bin/bash
 
+SHELL ["/bin/bash", "-c"]
 RUN yum -q -y install epel-release && \
     yum -q -y install python3-pip python3-wheel && \
     yum -q -y clean all && \
