Add support for osmctools 0.9.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,9 @@ x-rpmbuild:
     mapnik:
       image: rpmbuild-mapnik
       version: &mapnik_version '3.0.23-1'
+    osmctools:
+      image: rpmbuild-osmctools
+      version: &osmctools_version '0.9-1'
     osmosis:
       image: rpmbuild-generic
       version: &osmosis_version '0.48.3-1'
@@ -290,6 +293,27 @@ services:
         sfcgal_version: *SFCGAL_version
         sqlite_version: *sqlite_version
       dockerfile: docker/Dockerfile.rpmbuild-postgis-generic
+  rpmbuild-osmctools:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-generic
+    build:
+      <<: *build_defaults
+      args:
+        packages: "${RPMBUILD_OSMCTOOLS_PACKAGES}"
+        rpmbuild_channel: *rpmbuild_channel
+  rpmbuild-osmium-tool:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-libosmium
+    build:
+      <<: *build_defaults
+      args:
+        packages: "${RPMBUILD_OSMIUM_TOOL_PACKAGES}"
+        protozero_version: *protozero_version
+        libosmium_version: *libosmium_version
+        rpmbuild_channel: *rpmbuild_channel
+      dockerfile: docker/Dockerfile.rpmbuild-osmium-tool
   rpmbuild-osm2pgsql:
     <<: *service_defaults
     depends_on:
@@ -317,18 +341,6 @@ services:
         sqlite_version: *sqlite_version
         rpmbuild_channel: *rpmbuild_channel
       dockerfile: docker/Dockerfile.rpmbuild-osm2pgsql
-  rpmbuild-osmium-tool:
-    <<: *service_defaults
-    depends_on:
-      - rpmbuild-libosmium
-    build:
-      <<: *build_defaults
-      args:
-        packages: "${RPMBUILD_OSMIUM_TOOL_PACKAGES}"
-        protozero_version: *protozero_version
-        libosmium_version: *libosmium_version
-        rpmbuild_channel: *rpmbuild_channel
-      dockerfile: docker/Dockerfile.rpmbuild-osmium-tool
   rpmbuild-passenger:
     <<: *service_defaults
     depends_on:
