--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ x-rpmbuild:
     labels:
       maintainer: *rpmbuild_email
       vendor: *rpmbuild_vendor
+  minimum_versions:
+    libosmium: &libosmium_min_version '2.16.0'
+    protozero: &protozero_min_version '1.7.0'
   # Configuration for every dependency RPM.
   rpms:
     CGAL:
@@ -64,6 +67,9 @@ x-rpmbuild:
     osmium-tool:
       image: rpmbuild-osmium-tool
       version: &osmium-tool_version '1.13.1-1'
+      defines:
+        libosmium_min_version: *libosmium_min_version
+        protozero_min_version: *protozero_min_version
     osm2pgsql:
       image: rpmbuild-osm2pgsql
       version: &osm2pgsql_version '1.4.1-1'
@@ -101,6 +107,13 @@ x-rpmbuild:
       version: &protozero_version '1.7.0-1'
       arch: noarch
       name: protozero-devel
+    python3-osmium:
+      version: &pyosmium_version '3.1.3-1'
+      image: rpmbuild-pyosmium
+      defines:
+        libosmium_min_version: *libosmium_min_version
+        protozero_min_version: *protozero_min_version
+        pybind11_version: '2.6.2'
     ruby:
       image: &ruby_image rpmbuild-ruby
       version: &ruby_version '2.7.2-1'
@@ -309,11 +322,11 @@ services:
     build:
       <<: *build_defaults
       args:
+        libosmium_version: *libosmium_version
         packages: "${RPMBUILD_OSMIUM_TOOL_PACKAGES}"
         protozero_version: *protozero_version
-        libosmium_version: *libosmium_version
         rpmbuild_channel: *rpmbuild_channel
-      dockerfile: docker/Dockerfile.rpmbuild-osmium-tool
+      dockerfile: docker/Dockerfile.rpmbuild-libosmium-generic
   rpmbuild-osm2pgsql:
     <<: *service_defaults
     depends_on:
@@ -398,6 +411,19 @@ services:
         protobuf_version: *protobuf_version
         rpmbuild_channel: *rpmbuild_channel
       dockerfile: docker/Dockerfile.rpmbuild-protozero
+  rpmbuild-pyosmium:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-libosmium
+    build:
+      <<: *build_defaults
+      args:
+        libosmium_version: *libosmium_version
+        protozero_version: *protozero_version
+        packages: "${RPMBUILD_PYOSMIUM_PACKAGES}"
+        protobuf_version: *protobuf_version
+        rpmbuild_channel: *rpmbuild_channel
+      dockerfile: docker/Dockerfile.rpmbuild-libosmium-generic
   rpmbuild-rack:
     <<: *service_defaults
     depends_on:
