--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,19 @@ x-rpmbuild:
     labels:
       maintainer: *rpmbuild_email
       vendor: *rpmbuild_vendor
+  # Use consistent values for minimum versions for RPM build
+  # and runtime requirements.
   minimum_versions:
+    geos: &geos_min_version '3.9.0'
+    gdal: &gdal_min_version '3.2.0'
     libosmium: &libosmium_min_version '2.16.0'
+    postgis_min_version: &postgis_min_version '3.1.0'
+    proj: &proj_min_version '7.2.0'
+    protobuf: &protobuf_min_version '3.0.0'
+    protobuf-c: &protobuf_c_min_version '1.3.0'
     protozero: &protozero_min_version '1.7.0'
-  # Configuration for every dependency RPM.
+    sqlite_min_version: &sqlite_min_version '3.11.0'
+  # Configuration for building every dependency RPM.
   rpms:
     CGAL:
       image: rpmbuild-cgal
@@ -37,6 +46,9 @@ x-rpmbuild:
     gdal:
       image: rpmbuild-gdal
       version: &gdal_version '3.2.1-1'
+      defines:
+        geos_min_version: *geos_min_version
+        proj_min_version: *proj_min_version
     geos:
       image: rpmbuild-geos
       version: &geos_version '3.9.1-1'
@@ -44,8 +56,10 @@ x-rpmbuild:
       image: rpmbuild-gpsbabel
       version: &gpsbabel_version '1.7.0-1'
     libgeotiff:
-      image: &libgeotiff_image rpmbuild-libgeotiff
+      image: rpmbuild-libgeotiff
       version: &libgeotiff_version '1.6.0-1'
+      defines:
+        proj_min_version: *proj_min_version
     libkml:
       image: rpmbuild-libkml
       version: &libkml_version '1.3.0-1'
@@ -54,9 +68,15 @@ x-rpmbuild:
       version: &libosmium_version '2.16.0-1'
       arch: noarch
       name: libosmium-devel
+      defines:
+        protozero_min_version: *protozero_min_version
     mapnik:
       image: rpmbuild-mapnik
       version: &mapnik_version '3.0.23-1'
+      defines:
+        geos_min_version: *geos_min_version
+        postgis_min_version: *postgis_min_version
+        proj_min_version: *proj_min_version
     osmctools:
       image: rpmbuild-osmctools
       version: &osmctools_version '0.9-1'
@@ -73,6 +93,11 @@ x-rpmbuild:
     osm2pgsql:
       image: rpmbuild-osm2pgsql
       version: &osm2pgsql_version '1.4.1-1'
+      defines:
+        libosmium_min_version: *libosmium_min_version
+        proj_min_version: *proj_min_version
+        postgis_min_version: *postgis_min_version
+        protobuf_c_min_version: *protobuf_c_min_version
     rack:
       image: rpmbuild-rack
       version: &rack_version '2.2.3-1'
@@ -89,9 +114,18 @@ x-rpmbuild:
     postgis:
       image: rpmbuild-postgis
       version: &postgis_version '3.1.1-1'
+      defines:
+        gdal_min_version: *gdal_min_version
+        geos_min_version: *geos_min_version
+        proj_min_version: *proj_min_version
+        protobuf_min_version: *protobuf_min_version
+        protobuf_c_min_version: *protobuf_c_min_version
     proj:
       image: rpmbuild-proj
       version: &proj_version '7.2.1-1'
+      defines:
+        data_version: '1.4'
+        sqlite_min_version: *sqlite_min_version
     proj6:
       image: rpmbuild-proj
       version: &proj6_version '6.3.2-1'
@@ -102,20 +136,24 @@ x-rpmbuild:
     protobuf-c:
       image: rpmbuild-protobuf-c
       version: &protobuf-c_version '1.3.3-1'
+      defines:
+        protobuf_c_min_version: *protobuf_c_min_version
     protozero:
       image: rpmbuild-protozero
       version: &protozero_version '1.7.0-1'
       arch: noarch
       name: protozero-devel
+      defines:
+        protobuf_min_version: *protobuf_min_version
     python3-osmium:
-      version: &pyosmium_version '3.1.3-1'
       image: rpmbuild-pyosmium
+      version: &pyosmium_version '3.1.3-1'
       defines:
         libosmium_min_version: *libosmium_min_version
         protozero_min_version: *protozero_min_version
         pybind11_version: '2.6.2'
     ruby:
-      image: &ruby_image rpmbuild-ruby
+      image: rpmbuild-ruby
       version: &ruby_version '2.7.2-1'
       defines: &ruby_bundled_versions
         bundler_version: '2.1.4'
@@ -142,7 +180,7 @@ x-rpmbuild:
         test_unit_version: '3.3.4'
         xmlrpc_version: '0.3.0'
     sqlite:
-      image: &sqlite_image rpmbuild-sqlite
+      image: rpmbuild-sqlite
       version: &sqlite_version '3.34.1-1'
   service_volumes: &service_volumes
     - "./RPMS:/rpmbuild/RPMS:rw"
