--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,16 @@ x-rpmbuild:
     gpsbabel:
       image: rpmbuild-gpsbabel
       version: &gpsbabel_version '1.7.0-1'
+    google-noto-fonts-extra:
+      image: rpmbuild-fonts
+      version: &google-noto-fonts-extra_version '20210210-1'
+      defines:
+        commit: '0c0b4f8660099c9cda5db230f9ce38733089a2a9'
+      arch: noarch
+    hanazono-fonts:
+      image: rpmbuild-fonts
+      version: &hanazono-fonts_version '20170904-1'
+      arch: noarch
     libgeotiff:
       image: rpmbuild-libgeotiff
       version: &libgeotiff_version '1.6.0-1'
@@ -221,6 +231,15 @@ services:
       <<: *build_defaults
       args:
         packages: "${RPMBUILD_CGAL_PACKAGES}"
+        rpmbuild_channel: *rpmbuild_channel
+  rpmbuild-fonts:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-generic
+    build:
+      <<: *build_defaults
+      args:
+        packages: 'fontpackages-devel git python3 python3-pip'
         rpmbuild_channel: *rpmbuild_channel
   rpmbuild-gdal:
     <<: *service_defaults
