--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,13 @@ x-rpmbuild:
         geos_min_version: *geos_min_version
         postgis_min_version: *postgis_min_version
         proj_min_version: *proj_min_version
+    openstreetmap-carto:
+      image: rpmbuild-openstreetmap-carto
+      version: &openstreetmap_carto_version '5.3.1-1'
+      arch: noarch
+      defines:
+        data_fossgis_version: '3857'
+        data_natural_earth_version: '4.1.0'
     osmctools:
       image: rpmbuild-osmctools
       version: &osmctools_version '0.9-1'
@@ -363,6 +370,30 @@ services:
         sfcgal_version: *SFCGAL_version
         sqlite_version: *sqlite_version
       dockerfile: docker/Dockerfile.rpmbuild-postgis-generic
+  rpmbuild-openstreetmap-carto:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-mapnik
+    build:
+      <<: *build_defaults
+      args:
+        cgal_version: *CGAL_version
+        filegdbapi_version: *FileGDBAPI_version
+        gdal_version: *gdal_version
+        geos_version: *geos_version
+        gpsbabel_version: *gpsbabel_version
+        libgeotiff_version: *libgeotiff_version
+        libkml_version: *libkml_version
+        mapnik_version: *mapnik_version
+        packages: "${RPMBUILD_OPENSTREETMAP_CARTO_PACKAGES}"
+        postgis_version: *postgis_version
+        proj_version: *proj_version
+        protobuf_version: *protobuf_version
+        protobuf_c_version: *protobuf-c_version
+        rpmbuild_channel: *rpmbuild_channel
+        sfcgal_version: *SFCGAL_version
+        sqlite_version: *sqlite_version
+      dockerfile: docker/Dockerfile.rpmbuild-mapnik-generic
   rpmbuild-osmctools:
     <<: *service_defaults
     depends_on:
