--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,12 @@ x-rpmbuild:
       name: protozero-devel
       defines:
         protobuf_min_version: *protobuf_min_version
+    python-mapnik:
+      image: rpmbuild-python-mapnik
+      version: &python-mapnik_version '3.0.23-1'
+      defines:
+        # Have to specify git commit, project doesn't consistently use tags.
+        commit: '7da019cf9eb12af8f8aa88b7d75789dfcd1e901b'
     python3-osmium:
       image: rpmbuild-pyosmium
       version: &pyosmium_version '3.1.3-1'
@@ -517,6 +523,30 @@ services:
         protobuf_version: *protobuf_version
         rpmbuild_channel: *rpmbuild_channel
       dockerfile: docker/Dockerfile.rpmbuild-libosmium-generic
+  rpmbuild-python-mapnik:
+    <<: *service_defaults
+    depends_on:
+      - rpmbuild-mapnik
+    build:
+      <<: *build_defaults
+      args:
+        cgal_version: *CGAL_version
+        filegdbapi_version: *FileGDBAPI_version
+        gdal_version: *gdal_version
+        geos_version: *geos_version
+        gpsbabel_version: *gpsbabel_version
+        libgeotiff_version: *libgeotiff_version
+        libkml_version: *libkml_version
+        mapnik_version: *mapnik_version
+        packages: "${RPMBUILD_PYTHON_MAPNIK_PACKAGES}"
+        postgis_version: *postgis_version
+        proj_version: *proj_version
+        protobuf_version: *protobuf_version
+        protobuf_c_version: *protobuf-c_version
+        rpmbuild_channel: *rpmbuild_channel
+        sfcgal_version: *SFCGAL_version
+        sqlite_version: *sqlite_version
+      dockerfile: docker/Dockerfile.rpmbuild-mapnik-generic
   rpmbuild-rack:
     <<: *service_defaults
     depends_on:
