--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ x-rpmbuild:
     SFCGAL:
       image: rpmbuild-sfcgal
       version: &SFCGAL_version '1.3.9-1'
+    dumb-init:
+      image: rpmbuild-generic
+      version: '1.2.5-1'
     gdal:
       image: rpmbuild-gdal
       version: &gdal_version '3.2.1-1'
