--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -30,6 +30,8 @@ ENV LANG=${rpmbuild_lang} \
 
 # Install basic development and RPM authoring tools.
 RUN --mount=type=cache,target=/var/cache/yum \
+    yum-config-manager --quiet --save --setopt=base.repo_gpgcheck=1 && \
+    yum-config-manager --quiet --save --setopt=updates.repo_gpgcheck=1 && \
     yum -q -y update && \
     yum -q -y install \
       autoconf \
