--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ RPMS/noarch
 RPMS/x86_64
 SOURCES/*.asc
 SOURCES/*.gem
+SOURCES/*.gz
 SOURCES/*.pdf
+SOURCES/*.pbf
 SOURCES/*.sha256
 SOURCES/*.tgz
 SOURCES/*.tar.*
