Add Josh to contact metadata.

--- a/geoint-deps.info.yml
+++ b/geoint-deps.info.yml
@@ -14,3 +14,5 @@ poc:
     email: justin.bronn@maxar.com
   - name: David Hummel
     email: david.hummel@maxar.com
+  - name: Josh Sisskind
+    email: josh.sisskind@maxar.com
