--- a/docker/Dockerfile.rpmbuild
+++ b/docker/Dockerfile.rpmbuild
@@ -31,6 +31,7 @@ ENV LANG=${rpmbuild_lang} \
 # Install basic development and RPM authoring tools.
 RUN --mount=type=cache,target=/var/cache/yum \
     yum-config-manager --save \
+        --setopt=keepcache=1 \
         --setopt=base.repo_gpgcheck=1 \
         --setopt=extras.repo_gpgcheck=1 \
         --setopt=updates.repo_gpgcheck=1 &> /dev/null && \
